outputs/nbgallery/templates/deployment.yaml
---
# Source: nbgallery/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nbgallery
  labels:
    helm.sh/chart: nbgallery-0.1.0
    app.kubernetes.io/name: nbgallery
    app.kubernetes.io/instance: nbgallery
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: nbgallery
      app.kubernetes.io/instance: nbgallery
  template:
    metadata:
      labels:
        app.kubernetes.io/name: nbgallery
        app.kubernetes.io/instance: nbgallery
    spec:
      serviceAccountName: nbgallery
      securityContext:
        {}
      containers:
        - name: nbgallery
          securityContext:
            {}
          image: "nbgallery/nbgallery:latest"
          imagePullPolicy: Always
          ports:
            - name: gallery
              containerPort: 3000
              protocol: TCP
          resources:
            {}
