outputs/nbgallery/templates/service.yaml
---
# Source: nbgallery/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nbgallery
  labels:
    helm.sh/chart: nbgallery-0.1.0
    app.kubernetes.io/name: nbgallery
    app.kubernetes.io/instance: nbgallery
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: gallery
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: nbgallery
    app.kubernetes.io/instance: nbgallery
