outputs/nbgallery/templates/ingress.yaml
---
# Source: nbgallery/templates/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: nbgallery
  labels:
    helm.sh/chart: nbgallery-0.1.0
    app.kubernetes.io/name: nbgallery
    app.kubernetes.io/instance: nbgallery
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "false"
    nginx.ingress.kubernetes.io/auth-response-headers: X-Auth-Request-User, X-Auth-Request-Access-Token
    nginx.ingress.kubernetes.io/auth-signin: https://auth.udev.hogwarts.azure.chi/oauth2/start?rd=%2F$server_name$escaped_request_uri
    nginx.ingress.kubernetes.io/auth-url: https://auth.udev.hogwarts.azure.chi/oauth2/auth
spec:
  tls:
    - hosts:
        - "nbgallery.udev.hogwarts.azure.chi"
      secretName: nbgallery-tls
  rules:
    - host: "nbgallery.udev.hogwarts.azure.chi"
      http:
        paths:
          - path: /
            backend:
              serviceName: nbgallery
              servicePort: 3000
